Fix product page alignment issue

--- a/app/assets/stylesheets/tbar_custom.css.scss
+++ b/app/assets/stylesheets/tbar_custom.css.scss
@@ -425,3 +425,15 @@ footer {
   }
 }
 
+[data-route='spree/products/show'],
+[data-route='spree/products/show_package'] {
+  
+  #inside-product-cart-form {
+    margin-left: 0;
+  }
+  
+  [data-hook='product_price'] {
+    padding-left: 0;
+  }
+  
+}
